// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio renders correctly 1`] = `
<DocumentFragment>
  .cache-wkl0ld {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  height: 32px;
  cursor: pointer;
}

.cache-wkl0ld:hover .e1duuirp2,
.cache-wkl0ld:focus .e1duuirp2 {
  background-color: rgba(212,218,231,0.25);
  border-radius: 50%;
}

.cache-wkl0ld:hover .e1duuirp2>.e1duuirp3,
.cache-wkl0ld:focus .e1duuirp2>.e1duuirp3 {
  fill: #4f0599;
}

.cache-kwm2j4 {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-ldqu23 {
  fill: #dce1eb;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-ldqu23.cache-ldqu23 {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

<label
    class="e1duuirp1 cache-wkl0ld e7ah3bn0"
    for="radio-choice"
  >
    <div
      class="e1duuirp2 cache-kwm2j4 e7ah3bn0"
    >
      <svg
        class="e1duuirp3 etwatq50 cache-ldqu23 e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
        />
      </svg>
    </div>
    Choice
    <input
      class="cache-cujed6 e1duuirp0"
      id="radio-choice"
      name="radio"
      tabindex="0"
      type="radio"
      value="choice"
    />
  </label>
</DocumentFragment>
`;

exports[`Radio renders correctly when checked 1`] = `
<DocumentFragment>
  .cache-wkl0ld {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  height: 32px;
  cursor: pointer;
}

.cache-wkl0ld:hover .e1duuirp2,
.cache-wkl0ld:focus .e1duuirp2 {
  background-color: rgba(212,218,231,0.25);
  border-radius: 50%;
}

.cache-wkl0ld:hover .e1duuirp2>.e1duuirp3,
.cache-wkl0ld:focus .e1duuirp2>.e1duuirp3 {
  fill: #4f0599;
}

.cache-kwm2j4 {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-kptj9p {
  fill: #4f0599;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-kptj9p.cache-kptj9p {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

<label
    class="e1duuirp1 cache-wkl0ld e7ah3bn0"
    for="radio-choice"
  >
    <div
      class="e1duuirp2 cache-kwm2j4 e7ah3bn0"
    >
      <svg
        class="e1duuirp3 etwatq50 cache-kptj9p e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,7A5,5 0 0,0 7,12A5,5 0 0,0 12,17A5,5 0 0,0 17,12A5,5 0 0,0 12,7Z"
        />
      </svg>
    </div>
    Choice
    <input
      aria-checked="true"
      checked=""
      class="cache-cujed6 e1duuirp0"
      id="radio-choice"
      name="radio"
      tabindex="0"
      type="radio"
      value="choice"
    />
  </label>
</DocumentFragment>
`;

exports[`Radio renders correctly when disabled 1`] = `
<DocumentFragment>
  .cache-1xrgn6n {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  height: 32px;
  cursor: pointer;
  color: #b2b6c3;
  cursor: not-allowed;
}

.cache-kwm2j4 {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-ldqu23 {
  fill: #dce1eb;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-ldqu23.cache-ldqu23 {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

<label
    class="e1duuirp1 cache-1xrgn6n e7ah3bn0"
    disabled=""
    for="radio-choice"
  >
    <div
      class="e1duuirp2 cache-kwm2j4 e7ah3bn0"
    >
      <svg
        class="e1duuirp3 etwatq50 cache-ldqu23 e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
        />
      </svg>
    </div>
    Choice
    <input
      aria-disabled="true"
      class="cache-cujed6 e1duuirp0"
      disabled=""
      id="radio-choice"
      name="radio"
      style="pointer-events: none;"
      type="radio"
      value="choice"
    />
  </label>
</DocumentFragment>
`;
